// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkout() should return an object when summary is called 1`] = `
Object {
  "formatted": "R$3,025.56",
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Adidas",
      },
      "quantity": 5,
    },
    Object {
      "product": Object {
        "price": 41872,
        "title": "Nike",
      },
      "quantity": 3,
    },
  ],
  "total": Object {
    "amount": 302556,
    "currency": "BRL",
    "precision": 2,
  },
}
`;

exports[`Cart checkout() should return an object with the total and the list of items 1`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Adidas",
      },
      "quantity": 5,
    },
    Object {
      "product": Object {
        "price": 41872,
        "title": "Nike",
      },
      "quantity": 3,
    },
  ],
  "total": 302556,
}
`;
